encrypt password with bcrypt

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=3000
+PORT=3001
 USER_DB=anubedam
 PASSWORD_DB=T8bww8D3UgHu4ah7
 DB_NAME=taskmanager
+BCRYPT_SALT=$2b$10$uSxvn3.X1btVPULf6frrzO
