--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,10 @@
-PORT=3000
-USER_DB=<DB_USER>
-PASSWORD_DB=<DB_PASSWORD>
-DB_NAME=<DB_NAME>
-BCRYPT_SALT=<BCRYPT_SALT>
+# App configuration
+APP_PORT=3000
+BCRYPT_SALT=<SALT>
+JWT_SECRET=<SECRET>
+
+# Database configuration
+MONGO_URI=mongodb://mongo:27017/taskdb
+NODE_ENV=production
+MONGO_PORT=27017
+
