--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,8 @@
 node_modules
 npm-debug.log
-Dockerfile
-docker-compose.yml
+Dockerfile.dev
+Dockerfile.prod
+docker-compose.dev.yml
+docker-compose.prod.yml
 .git
 .gitignore
