RED: docker dev environment is not working

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 # App configuration
 APP_PORT=3000
-BCRYPT_SALT=\$2b\$12\$4M1mZ2QfEXZJNmHDY7YlH.Mz3E9xC8yx6H14uU2mFXElwAVQdFPnq
+BCRYPT_SALT=$$2b$$10$$uN7tDVeKZ2CZ32s3yAXCee
 JWT_SECRET=aM457_24xJñQ!l12_78r2742
 
 # Database configuration
