--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # App configuration
 APP_PORT=3000
-BCRYPT_SALT=QmVzdFNlY3VyZVNhbHRTdHJpbmcxMjM0
+BCRYPT_SALT=$$2b$$10$$uN7tDVeKZ2CZ32s3yAXCee
 JWT_SECRET=akMlO0a27\$4576213524_lñ%km
 
 # Database configuration
